# cudaq_clang_python

./: CMakeLists.txt
include/: noise_wrapper.h
python/: test.py
src/: bindings.cpp  noise_wrapper.cpp
